--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script src="scripts.js" defer></script>
     <div class="container">
         <!-- Left Navigation -->
         <nav class="sidebar">
@@ -30,5 +29,7 @@
             </section>
         </main>
     </div>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script src="scripts.js" defer></script>
 </body>
 </html>
