--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
         </main>
     </div>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script>
+        if (window.netlifyIdentity) {
+          window.netlifyIdentity.on("init", (user) => {
+            if (user) {
+              window.location.href = "/admin/";
+            }
+          });
+        }
+      </script>      
     <script src="scripts.js" defer></script>
 </body>
 </html>
