resolved bug with redirect

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </main>
     </div>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <script>
+    <!-- <script>
         if (window.netlifyIdentity) {
           window.netlifyIdentity.on("init", (user) => {
             if (user) {
@@ -38,7 +38,7 @@
             }
           });
         }
-      </script>      
+      </script>       -->
     <script src="scripts.js" defer></script>
 </body>
 </html>
